--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,25 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    background-color: #99fffc22;
+
+    @apply text-slate-600;
+  }
+
+  body::before {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    content: "";
+    background-image:
+      radial-gradient(at 43% 87%, hsla(209, 79%, 67%, 1) 0px, transparent 50%),
+      radial-gradient(at 2% 48%, hsla(186, 95%, 49%, 1) 0px, transparent 50%),
+      radial-gradient(at 29% 7%, hsla(182, 76%, 71%, 1) 0px, transparent 50%);
+    opacity: 0.1;
+    z-index: -1;
   }
 }
